--- a/onboarding-bootstrap/package.json
+++ b/onboarding-bootstrap/package.json
@@ -7,7 +7,8 @@
                 "request-promise-native": "*",
                 "request": "*",
                 "xlsx-rows": "*",
-                "dotenv": "*"
+                "dotenv": "*",
+                "sleep" : "*"
         }
 	
 	
