use system-sleep

--- a/onboarding-bootstrap/package.json
+++ b/onboarding-bootstrap/package.json
@@ -8,7 +8,7 @@
                 "request": "*",
                 "xlsx-rows": "*",
                 "dotenv": "*",
-                "sleep" : "*"
+                "system-sleep" : "*"
         }
 	
 	
